# uijit

./: .gitignore  CNAME  LICENSE  README.md  index.html  pyproject.toml
canvas-receiver/: index.html
src/uijit/: __init__.py  __main__.py  canvas_manager.py  cli.py  models.py  renderer.py  server.py  web_server.py
tests/: test_canvas_manager.py
